update BlazeCompilerFlagsProcessor to return an immutable list